--- a/css&Js/style1.css
+++ b/css&Js/style1.css
@@ -11,6 +11,20 @@ body {
 }
 
 /* Header */
+.btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+
 .blog-header {
   background-color: #6200ea;
   color: white;
